bk_ida/gobmkida/c1/do_commit_suicide
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_commit_suicide/src/engine/board.c:3845:24: error: use of undeclared identifier 'byte_9AA89F'
if ( ( unsigned __int8)byte_9AA89F[pos] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_commit_suicide/src/engine/board.c:3847:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[pos] == color ) 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_commit_suicide/src/obj/1/board.o] Error 1
